# PandasPublisher

./: README.md  pyproject.toml
examples/: example_usage.py
examples/templates/: sample_template.html
pandaspublisher/: generate.py
